<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/NumeroControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNoControl" android:textSize="14sp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/nombre_estudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre" android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvNoControl" android:layout_marginTop="48dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/calificacion_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCal1" android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" android:layout_marginTop="44dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/calificacion_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCal2" android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvCal1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
    />
    <TextView
            android:text="@string/calificacion_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCal3" android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvCal2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
    />
    <TextView
            android:text="@string/calificacion_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCal4" android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvCal3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.095" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="184dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNombre"
            android:textSize="14sp"
            android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/etNoControl"
            android:hint="@string/nombre" app:layout_constraintStart_toEndOf="@+id/tvNombre" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="184dp"
            android:layout_height="41dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etCal1" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombre"
            android:layout_marginEnd="44dp" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/cal1"
            app:layout_constraintStart_toEndOf="@+id/tvCal1"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.514"/>
    <EditText
            android:layout_width="186dp"
            android:layout_height="38dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/etNoControl"
            android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="44dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/numero_de_control"
            app:layout_constraintStart_toEndOf="@+id/tvNoControl" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.636" android:layout_marginTop="40dp"/>
    <EditText
            android:layout_width="181dp"
            android:layout_height="44dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etCal2"
            android:hint="@string/cal2"
            app:layout_constraintStart_toEndOf="@+id/tvCal2"
            android:layout_marginStart="52dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etCal1"/>
    <EditText
            android:layout_width="181dp"
            android:layout_height="39dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etCal3"
            android:hint="@string/cal3"
            app:layout_constraintStart_toEndOf="@+id/tvCal3" android:layout_marginStart="52dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/etCal2"/>
    <EditText
            android:layout_width="179dp"
            android:layout_height="40dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etCal4"
            android:hint="@string/cal4" app:layout_constraintStart_toEndOf="@+id/tvCal4"
            android:layout_marginStart="44dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/etCal3"/>
    <Button
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcular" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etCal4" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.191"
            android:onClick="Calular"/>
</androidx.constraintlayout.widget.ConstraintLayout>